--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
   "devDependencies": {
-    "knex": "^3.1.0"
+    "jest": "^30.0.5",
+    "knex": "^3.1.0",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.4"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "sqlite3": "^5.1.7"
   }
 }
