--- a/package.json
+++ b/package.json
@@ -1,17 +1,78 @@
 {
-  "devDependencies": {
-    "jest": "^30.0.5",
-    "knex": "^3.1.0",
-    "nodemon": "^3.1.10",
-    "supertest": "^7.1.4"
+  "name": "afilite-backend",
+  "version": "1.0.0",
+  "description": "AfiLite influencer marketing platform backend API",
+  "main": "src/app.js",
+  "scripts": {
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:load": "jest tests/load.test.js --detectOpenHandles --runInBand --testTimeout=120000",
+    "lint": "eslint src/ tests/",
+    "lint:fix": "eslint src/ tests/ --fix",
+    "db:migrate": "knex migrate:latest",
+    "db:seed": "knex seed:run"
   },
+  "jest": {
+    "testEnvironment": "node",
+    "coverageDirectory": "coverage",
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/db/**",
+      "!**/node_modules/**"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": 80
+      }
+    },
+    "testMatch": [
+      "**/*.test.js"
+    ],
+    "testTimeout": 90000,
+    "verbose": true,
+    "globalSetup": "./tests/setup.js",
+    "globalTeardown": "./tests/teardown.js"
+  },
+  "keywords": [
+    "influencer",
+    "marketing",
+    "affiliate",
+    "api",
+    "nodejs"
+  ],
+  "author": "AfiLite Team",
+  "license": "MIT",
   "dependencies": {
-    "bcrypt": "^6.0.0",
+    "bcrypt": "^5.1.1",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "express-rate-limit": "^8.0.1",
-    "helmet": "^8.1.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.10.0",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
+    "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
-    "sqlite3": "^5.1.7"
+    "knex": "^2.5.1",
+    "morgan": "^1.10.0",
+    "rate-limit-redis": "^4.2.1",
+    "redis": "^4.6.7",
+    "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "eslint": "^8.46.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.6.2",
+    "jest-dev-server": "^11.0.0",
+    "nodemon": "^3.0.1",
+    "redis-memory-server": "^0.12.1",
+    "supertest": "^6.3.3"
   }
 }
